# sviet

./: Cargo.toml  README.md  index.html
src/: lib.rs  render_context.rs
src/object/: mesh.rs  mod.rs  sphere.rs
src/scene/: camera.rs  mod.rs
src/shader/: raytracing.wgsl
src/utils/: bvh.rs  mod.rs
