[package]
name = "pathracer-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pathracer-wgpu"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cfg-if = "1"
winit = { version = "0.30.7" }
env_logger = "0.11.6"
log = "0.4"
wgpu = { version = "23.0.1", default-features = false }
pollster = "0.4.0"
bytemuck = { version = "1.16", features = ["derive"] }
nalgebra-glm = { version = "0.19.0", features = ["convert-bytemuck"] }
instant = "0.1"
egui = "0.30.0"
egui-wgpu = { version = "0.30.0",features = ["winit"] }
rand = { version = "0.8.5" }
tobj = "4.0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.30.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version ="0.30.0", default-features=false }
getrandom = { version = "0.2.15", features = ["js"] }
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "GpuCanvasContext",
    "HtmlCanvasElement"
]}
instant = { version = "0.1", features = ["wasm-bindgen"] }

[features]
default = ["wgpu/default"]
webgpu = ["wgpu/webgpu"]

# For very small final binary size,
# uncomment the following release profile and build with it
#
# [profile.release]
# codegen-units = 1 # Reduce parallel code generation units
# strip = true      # Automatically strip symbols from the binary.
# opt-level = "z"   # Optimize for size
# lto = true        # Link time optimization
# panic = "abort"   # On panic, abort immediately rather than unwinding. Don't use this if you want backtraces.
#
# Then compress the final executable further with:
# upx --best --lzma ./target/release/app
#
# Or on windows,
# upx --best --lzma ./target/release/app.exe